recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:14: error: identifier expected but ')' found.
  faireCarree(100.)
                  ^